Detach Edge on Lead, Case list page
Former-commit-id: 1d89f6f00376409dc473361880c5ef0764c9951f [formerly 0d4b48fc0e09da5d1823841c2063b3e7aeca247e] [formerly 20a6b2845201b12186c57596fa5321445a2f9ba6 [formerly 12acf649e53f9ef4f2d12d98d86b3bc577a95f39]]
Former-commit-id: 47712de957f898bfc2c6086fc9c916cea302d13c [formerly 08c615a590a6855cd61035d2a26f7c2e4579314f]
Former-commit-id: 1486aaec0311a0bc6c1199ac1fc06d4f7478bcb1

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -45,7 +45,11 @@
         </div>
       </div>
   </div>
-  <div class="dropOut"></div>
+  <div class="dropOut"  ng-show="showUntag" >
+    <div class="trash">
+      <img alt="delete tag" droppable ng-drop="dropOutTag()" class="" src="/static/img/iotrash.png" >
+    </div>
+</div>
       <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <!-- BEGIN PAGE CONTAINER-->
   <div class="container-fluid"ng-show="immediateFailed">
@@ -121,7 +125,7 @@
                 <div class="tagsSection " ng-class="{hidden: casee.tags==null}">
                   <div class="">
                     <div class="sectionContent">
-                      <a ng-repeat="tag in casee.tags" href="/#/search/type:casee tags:<%=tag.id%>"> <span class=" task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                      <a ng-repeat="tag in casee.tags" href="/#/search/type:casee tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)"  class=" task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
                       </a>
                     </div>
                     </div>
