finishing Detach edge on opportunity, case, task
Former-commit-id: 9bfd51938e838071c5042ef3f081681f445f4cdd [formerly a6db9cdd44bf21e5512834ad1bf9a0d74090664f] [formerly 15151dfdd81154c2d89ae7006208d8dff77fcd0a [formerly bc80c54d296315aa5131bb90bbc669e4f4c44de3]]
Former-commit-id: 6329a3422f562ae5853a3458049705bb8e33de5a [formerly de42eecca6da1381edbd3f187cd9837d09f048fa]
Former-commit-id: 56edd5e90bdb2f1b76e6bfeadac4b994c14586c0

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -23,6 +23,17 @@
       </div>
     </div>
   </div>
+  <div class="dropOut"  ng-show="showUntag" >
+    <div class="trash">
+      <img alt="delete tag" droppable ng-drop="dropOutTag()" class="" src="/static/img/iotrash.png" >
+    </div>
+  </div>
+
+  <div class="dropOut"  ng-show="showUntag" >
+    <div class="trash">
+      <img alt="delete tag" droppable ng-drop="dropOutTag()" class="" src="/static/img/iotrash.png" >
+    </div>
+</div>
    
       <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <!-- BEGIN PAGE CONTAINER-->
@@ -149,7 +160,7 @@
                                          
                                        </div>
                                         <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                            <span draggable  ng-drag="dragTagItem(task_tag.edgeKey)"  ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
@@ -489,7 +500,7 @@
                                          
                                        </div>
                                         <div class="col-md-5 col-xs-12">
-                                            <span ng-repeat="task_tag in task.tags" class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
+                                            <span ng-repeat="task_tag in task.tags"  class="pull-right task-label task-tag badge" style="background-color: <%=task_tag.color%>;color:<%=idealTextColor(task_tag.color)%>;">
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
