--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -4,7 +4,7 @@
        {{active_app.label}}
        <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
       </h2>
-    </div> 
+    </div>
     <div class=" subHeaderContent">
       <div class="col-md-9">
       <div class="row">
@@ -33,7 +33,7 @@
       </div>
       <div class="col-md-2 col-xs-2">
       <a href="/#/contacts/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
-           New <span class="hidden-xs hiddenOnxs">Contact</span> 
+           New <span class="hidden-xs hiddenOnxs">Contact</span>
          </a>
       </div>
       </div>
@@ -75,9 +75,9 @@
         </div>
      <div class="col-md-3 col-sm-3 col-xs-3">
         <div class="row">
-         <div class="pull-right" > 
+         <div class="pull-right" >
            <a href="/#/contacts/new" class="btn red newBtn">
-                        New Contact 
+                        New Contact
           </a>
             <div class="btn-group newBtn">
           <button  ng-click="showImportModal()" id="sample_editable_1_new" class="btn red">
@@ -88,7 +88,7 @@
          </div>
     </div>
   </div>
- <div class="row">      
+ <div class="row">
    <div class="col-md-12">
 
      <div class="row">
@@ -123,6 +123,9 @@
                       <a  class="desc" href="/#/search/type:Contact <%=contact.account.name%>">
                         #<%=contact.account.name%>
                       </a>
+                    </span>
+                    <span>
+                        <%=fromNow(contact.updated_at)%>
                     </span>
                   </div>
                 </div>
