Correct bug, add contact are not working on Account new Page
Former-commit-id: f2aeaba6fdacd7c5e20f7e115f643ff5c4206309 [formerly 88ea2781b260c57ec566dc535c73407dbaee95e3] [formerly efa21cb0899b3d5c93d9888ac6a2c72035f7d30d [formerly f407111b298c64a8b8bc0a6a8a1394f6ce1c4988]]
Former-commit-id: 128bdb0eb7e09a8c94f3c6e1de4fa1252566b176 [formerly e1e38cb73b9a5df9d9c4982d4b3b86eddfab94e3]
Former-commit-id: 5552501f21995ee9df205c5656cc93aae493b21e

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
               <li class="dropdown user">
                 <a href="/#/admin/users" class="dropdown-tog" target="new">
                   <span class="username">
-                    My Team
+                    Invite Users
                   </span>
                 </a>
               </li>
