Change URL Calendar tab, fix #520
Former-commit-id: 4656d598bb29ad6f94b73c7debfad9049e8d3aa0 [formerly b7534ed56fe3179145f82c0690307b93af484aa0] [formerly 0c3c077491e9202e674467bfd062e3b0f3c8867f [formerly d3c2c201afe43071c106fd96d2a9ec37504be187]]
Former-commit-id: 1844760a196c877a88c4594b6ed1cb0ea5ae68dd [formerly f7f354887446b58818412e8d5055fc543579de96]
Former-commit-id: 854327f4647361c1a9c962137ff750a5db850f81

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -946,7 +946,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" ng-click="updatecontact(contact)" class="btn btn-primary addContactNow">{{_("Save")}} </button>
+                <button   ng-click="updatecontact(contact)" class="btn btn-primary addContactNow">{{_("Save")}} </button>
               </div>
                </form>
                </div>
