URL to the logo on the App,  fix #523, Update Task on Task show page, fix #495
Former-commit-id: 4d2ec1ffc6ca96a1864235f83e0f01f452225438 [formerly 1ee78dabcaf7f2213123f0387c6b0f0e3bb82075] [formerly e07d1bcacb6ae600995d407131460b6cabeb0406 [formerly 04ca2062fb98446c668ead6303d542fecc7c7741]]
Former-commit-id: ffa0f4f3ccbbf7e34b556fa1ee3c78de180cb2f2 [formerly e79087df76b9093ccd82e9845f771c5bb9060075]
Former-commit-id: aa613090cafd5cf353b3287e00f00e4b3a14670a

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
     <!-- BEGIN TOP NAVIGATION BAR -->
     <div class="header-inner"  >
       <!-- BEGIN LOGO -->
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand" href="/#/leads">
         <img src="http://storage.googleapis.com/iogrow-gs/static/img/iogrow_logo_144_32.png" alt="logo" class="img-responsive" style="height:32px;"/>
       </a>
       <!-- END LOGO -->
