--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -142,7 +142,7 @@
              </span>
               
             </h2>
-            
+            <!--a > <%=task.status%> </a-->
             <hr class="sepLine">
       <!-- BEGIN PORTLET-->
       <!-- End Portlet -->
