fix permissions on events.list api
Former-commit-id: 8b78aad32a667339e98bd5aeaf160bb26a284cc2 [formerly bdade66f2be5bb4a6c5843dd5194a2430f7722da] [formerly b3d5029335d6c188ee307754d869f4da6de80c4d [formerly 25d6edb122e193240858e478ee84389d15e2d914]]
Former-commit-id: 67a0332350b4ce4173e9ea1df9c9e67cd29b852e [formerly 54896c432cd03f02347abed94035cd2e5308ec4a]
Former-commit-id: 9eba82138865a773dfd3b6df9fe570afc15a2188

--- a/templates/base.html
+++ b/templates/base.html
@@ -351,10 +351,10 @@
 
 
 
-       var ROOT = '/_ah/api';
+      //  var ROOT = '/_ah/api';
 
 
-        //  var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+         var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
         var callback = function() {
@@ -485,7 +485,7 @@
   <script src="static/plugins/fullcalendar/fullcalendar/lang/all.js"></script>
 
   <script src="static/plugins/fullcalendar/fullcalendar/gcal.js"></script>
-  <script src="static/app/scripts/vendor/calendar.js"></script> 
+  <script src="static/app/scripts/vendor/calendar.js"></script>
 
 
 
