--- a/templates/base.html
+++ b/templates/base.html
@@ -351,10 +351,10 @@
 
 
 
-      //  var ROOT = '/_ah/api';
+       var ROOT = '/_ah/api';
 
 
-         var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+        //  var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
         var callback = function() {
