fixing sign-in button responsive problem
Former-commit-id: e55c1ecc0f20f39f9c3ee4d32b4558fdf0e30e0b [formerly 9cb000dd3ef288b3e20ab587afd1451acbbd558d] [formerly f0ee93def114f02ae87320f6b9f1ccb31cb5bd99 [formerly abdae8ffee2cc6c6f2ad5ecf8bde8f4a4f6ca026]]
Former-commit-id: 4a6180cbaa82a360ded3356e0dedf94d56b89759 [formerly 46d1a4e274ceb72f23db4ca2ed576887d39f74b9]
Former-commit-id: 3e492eb657321fa553f7b8913974fa1a2115d8d7

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -165,13 +165,7 @@
   </style>
   <!-- In the callback, you would hide the gSignInWrapper element on a
   successful sign in -->
-  <div id="gSignInWrapper">
-    <span class="label">Sign in with:</span>
-    <div id="customBtn" class="customGPlusSignIn">
-      <span class="icon .buzz-out"></span>
-      <span class="buttonText">Give ioGrow a try - it's free</span>
-    </div>
-  </div>
+
 
         <script type="text/javascript">
             var Keen=Keen||{configure:function(e){this._cf=e},addEvent:function(e,t,n,i){this._eq=this._eq||[],this._eq.push([e,t,n,i])},setGlobalProperties:function(e){this._gp=e},onChartsReady:function(e){this._ocrq=this._ocrq||[],this._ocrq.push(e)}};(function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src=("https:"==document.location.protocol?"https://":"http://")+"dc8na2hxrj29i.cloudfront.net/code/keen-2.1.0-min.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})();
@@ -203,18 +197,18 @@
 
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav cl-effect-13">
-                        <li class="active"><a href="#home" class="smoothScroll" <a href="#home" class="smoothScroll">Home</a></li>
-                        <li><a href="#features" class="smoothScroll">Features</a></li>
-                        <li><a href="#pricing" class="smoothScroll">Pricing</a></li>
-                        <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                        <li class="active" align="center"><a href="#home" class="smoothScroll" <a href="#home" class="smoothScroll">Home</a></li>
+                        <li><a href="#features" align="center" class="smoothScroll">Features</a></li>
+                        <li><a href="#pricing" align="center" class="smoothScroll">Pricing</a></li>
+                        <li><a href="#contact" align="center" class="smoothScroll">Contact</a></li>
                     </ul>
 
                     <!-- Sign In / Sign Up -->
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right cl-effect-13">
                         <!-- <li class="dropdown"><a href="#signin" data-toggle="modal" data-target=".bs-modal-sm"><i class="fa fa-lock"></i> Sign In</a></li> -->
-                        <div class="navbar-form pull-left">
+                        <div class="navbar-form">
 
-                           <div id="gSignInWrapper">
+                           <div id="gSignInWrapper" align="center">
     <div id="customBtn" class="customGPlusSignIn">
       <a href="/early-bird" >
       <span class="icon"></span>
