--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -46,7 +46,7 @@
                     </span>
                     <span class="page-meta pull-right">
                       <i class="icon-trash">
-                        <a ng-click="deleteAttachement()" class="btn-link addAnotherPhone">  Delete
+                        <a ng-click="editbeforedelete()" class="btn-link addAnotherPhone">  Delete
                         </a>
                       </i>
                     </span>
@@ -208,85 +208,26 @@
     </div>
   </div>
      
-            <!--HKA 11.10.2013 Edit Contact -->
-             <div id="EditContactModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-
-              <div class="modal-dialog">
-    <div class="modal-content">
-        <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">{{_("Edit Contact")}}</h3>
-              </div>
-
-              <div class="modal-body">
-                 <form id="editAccount" name="editlead" ng-submit="updatecontact(contact)" class="form-horizontal"> 
-                
-
-                  <div class="form-group">
-                        <label  class="required col-md-3 control-label">{{_("First Name")}} </label>
-                       
-                        <div class="col-md-9">
-                          <input type="text" class="form-control" required id="id_firstname" ng-model="contact.firstname">
-                          
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label  class="required col-md-3 control-label">{{_("Last Name")}}</label>
-                       
-                        <div class="col-md-9">
-                          <input type="text" class="form-control"  id="id_type" ng-model="contact.lastname">
-                          
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label  class="required col-md-3 control-label">{{_("Tittle")}} </label>
-                       
-                        <div class="col-md-9">
-                          <input type="text" class="form-control"  required id="id_Title" ng-model="contact.title">
-                          
-                        </div>
-                    </div>
-                    <!--div class="control-group">
-                        <label  class="required col-md-3 control-label">{{_("Company")}} </label>
-                       
-                        <div class="col-md-9">
-                          <input type="text" class="form-control"   id="id_Company" ng-model="contact.company">
-                          
-                        </div>
-                    </div-->                     
-                  
-                     
-                    
-                  
-                
-              </div>
-              <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" class="btn btn-primary addContactNow">{{_("Save")}} </button>
-              </div>
-               </form>
-               </div>
-               </div>
-              </div>
+        
           <!--HKA 24.12.2013 Modal before Deleting Contact-->
-  <div id="BeforedeleteContact" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div id="BeforedeleteEvent" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">Delete Contact</h3>
+                <h3 id="myModalLabel" class="modal-title">Delete Event</h3>
               </div>
               <div class="modal-body">
                  <form id="seletesho" name="deletesho" class="form-horizontal"> 
                 
 
-                  <p>{{_("Are you sure you want to delete")}} :  <%=contact.firstname%> <%=contact.lastname%>  .</p>
+                  <p>{{_("Are you sure you want to delete")}} :  <%=event.title%>.</p>
 
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 
-                <input  ng-click="deletecontact()" type="submit" class="btn red" value="Delete this Contact">
+                <input  ng-click="deleteEvent()" type="submit" class="btn red" value="Delete this Event">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                </form>
