ng-show on Lead show page, fix #536
Former-commit-id: 50b5c2ee7a7abd724dc69435b91a3745d2bc280f [formerly 0435c84a5ed7851ed42e3db50671c4d93d24ac0c] [formerly 3567f0e99babb38a7b87fbe364433dcbfe9711d8 [formerly b34ac3e310d4de535780e869fc279c05982519ba]]
Former-commit-id: 76567abda4267dd95fe764a1afb07f9bb52bcfe4 [formerly 5b92ef93bbf3de3e9feb95a5e64ec58607fe30c5]
Former-commit-id: 1954c4d2f52d6e9907ace2b1b1cd291ff056c009

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -83,7 +83,7 @@
               </div>
               <div class="form-group row">
                     <div class="col-md-12">
-                      <textarea id="noteBody" ng-blur="updateEvent({'id':event.id,'description':event.description})" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.description"></textarea>
+                      <textarea id="noteBody" ng-blur="updateEvent(<%=event.description%>)" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.description"></textarea>
                     </div>
               </div>
               <div class="news-block-tags event-block-title">
@@ -582,11 +582,11 @@
                     <div class="radio-list">
                          
                             <label >
-                            <input type="radio" name="optionRadio" value="public" ng-model="contact.access" />
+                            <input type="radio" name="optionRadio" value="public" ng-model="event.access" />
                             {{ _("public: Anyone within your organization can access and find") }}
                             </label>
                             <label >
-                            <input type="radio" name="optionRadio"  value="private" ng-model="contact.access" />
+                            <input type="radio" name="optionRadio"  value="private" ng-model="event.access" />
                             {{ _("private: only you and your collaborators") }}
                             </label>                       
                     </div>
