ng-show on lead.status
Former-commit-id: 9ba01b93d57d047f052f3fd5d5050ac48a55b385 [formerly a5b9c155356e8b541427bce791361a021bfda22e] [formerly c64567e65fcace518b4cf4ad7d685363c215e5d9 [formerly 35915a9f928d13c55866c79e6aeee486089037cd]]
Former-commit-id: f37874e6b40a93f3e9901d8925d959d8340052f7 [formerly 39020ba4348e38b8c597043140d2636809f209d6]
Former-commit-id: 218aae7dcfa3e95491c1708c55e015358f3134f7

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -72,8 +72,8 @@
               <a   href="/#/search/type:Lead <%=lead.industry%>" class="tag" ng-show="lead.industry"> #<%= lead.industry %></a> <br>
               <span ng-show="lead.source">{{_("Source")}} : </span>
               <a   href="/#/search/type:Lead <%=lead.source%>" class="tag" ng-show="lead.source"> #<%= lead.source %></a> <br>
-              <span ng-show="lead.company">{{_("Status")}} : </span>
-              <a   href="/#/search/type:Lead <%=lead.status%>" class="tag" ng-show="lead.company"> #<%= lead.status %></a> <br>
+              <span ng-show="lead.status">{{_("Status")}} : </span>
+              <a   href="/#/search/type:Lead <%=lead.status%>" class="tag" ng-show="lead.status"> #<%= lead.status %></a> <br>
                   <br>
                   <hr>
                 </div>
