Change the text on google Landing Page
Former-commit-id: 269a5bfb708cc015b6ede2f942b396a15f96705c [formerly 6718f1bda9e6ac8171532c3005004d716e02f068] [formerly 25b435b00fd152f84738f81af187f1bcb4a058c3 [formerly 28854f11801aad930a2bc47135bfd061303eb04b]]
Former-commit-id: 17709841cc28af22f923b5136505976fbc3a7552 [formerly f835fb43c27350bb7f4b64f1bbd082002d3298f9]
Former-commit-id: 826af1bb5eccceaa7fa8854ae7ec12e9c36d4ca0

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -363,8 +363,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-12">
-                        <h1>Grow and Manage your relationships with the right people!</b></h1>
-                        <h3><b>The next generation of Google Contacts</b></h3>
+                        <h1>The next generation of Google Contacts</b></h1>
+                        <h3><b>Grow and Manage your relationships with the right people!</b></h3>
                         <br>
                     </div>
 
